--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "main": "index.js",
   "scripts": {
     "start": "babel-node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha --reporter spec"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-cli": "^6.7.5",
     "express": "^4.13.4",
     "slack-express": "^5.8.0",
-    "slackbots": "^0.5.1"
+    "slackbots": "^0.5.1",
+    "underscore": "^1.8.3"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.7.7",
+    "chai": "^3.5.0"
   }
 }
