--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "express": "^4.13.4",
     "slack-express": "^5.8.0",
     "slackbots": "^0.5.1",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "babel-cli": "^6.7.7"
   },
   "devDependencies": {
-    "babel-cli": "^6.7.7",
     "chai": "^3.5.0"
   }
 }
