--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.7.7",
     "express": "^4.13.4",
     "slack-express": "^5.8.0",
     "slackbots": "^0.5.1",
-    "underscore": "^1.8.3",
-    "babel-cli": "^6.7.7"
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "chai": "^3.5.0"
+    "chai": "^3.5.0",
+    "mocha": "^2.4.5"
   }
 }
