--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node index.js",
-    "test": "./node_modules/.bin/mocha --reporter spec"
+    "dev": "nodemon --exec babel-node src/",
+    "pretest" : "npm run build",
+    "test": "./node_modules/.bin/mocha --reporter spec",
+    "build": "babel src --out-dir dist",
+    "prestart": "npm run build",
+    "start": "node dist/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-cli": "^6.7.7",
+    "babel-cli": "^6.10.1",
+    "babel-preset-es2015": "^6.9.0",
+    "nodemon": "^1.9.2",
+    "slackbots": "^0.5.1",
     "express": "^4.13.4",
     "slack-express": "^5.8.0",
-    "slackbots": "^0.5.1",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
