--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec babel-node src/",
-    "pretest" : "npm run build",
-    "test": "./node_modules/.bin/mocha --reporter spec",
+    "test": "nodemon --exec mocha --reporter spec --compilers js:babel-core/register",
     "build": "babel src --out-dir dist",
     "prestart": "npm run build",
     "start": "node dist/index.js"
@@ -24,6 +23,8 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "isparta": "^4.0.0",
+    "istanbul": "^0.4.4",
     "mocha": "^2.4.5"
   }
 }
